--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,6 @@
 *{
     background: #754c4c;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .nav-bar{
     display: flex;
@@ -50,7 +51,7 @@
 }
 .contact-info{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     justify-content: space-around;
     background-color: white;
 }
@@ -146,4 +147,23 @@
     margin-right: 500px;
     margin-bottom: 30px;
     transition: 0.3s;
+}
+.my-skills{
+    display: flex;
+    justify-content: space-around;
+}
+h1{
+    text-align: center;
+}
+.my-skills .html,
+.my-skills .css,
+.my-skills .js{
+    height: 300px;
+    width: 300px;
+    border-radius: 10px;
+    background-color: white;
+}
+.my-skills{
+    height: 300px;
+    background-color: white;
 }
